--- a/Week1_Excerise.html
+++ b/Week1_Excerise.html
@@ -3,7 +3,8 @@
 <title> Week 1 Excerise </title>
 </head>
 <body>
-  Body Text  
+  <p> Body Text </p>  
 </body>
+<img src="https://images.app.goo.gl/k3Ys21AkcudXQz7T9" alt="">
 
 </html>
